welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: not found: value taille
  taille = getWorldHeight()
  ^Array2:5: error: not found: value taille
  var T = Array[Color](taille)
                       ^Array2:7: error: not found: value taille
  for (i <- 1 to taille - 1 )
                 ^Array2:12: error: not found: value taille
  for (i <-0 to taille - 1)
                ^Array2:20: error: not found: value c
  c = T((0+decalge)%taille)
  ^Array2:21: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
  setCouleurBrosse
  ^Array2:24: error: not found: value taille
  for (i <- 1 to taille - 1)
                 ^Array2:26: error: not found: value c
      c = T((i+decalge)%taille)
      ^Array2:27: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
  setCouleurBrosse
  ^Array2:31: error: not found: value taille
  for(i<-0 to taille - 1 )
              ^Array2:40: error: not found: value T
  T = met_couleur_tableau()
  ^Array2:41: error: not found: value taille
  for (i <- 0 to taille - 1)
                 ^Array2:47: error: not found: value T
      coloriage(T,decalage)
                ^